--- a/package.json
+++ b/package.json
@@ -10,27 +10,29 @@
     "codegen": "ts-node ./scripts/codegen.ts"
   },
   "dependencies": {
-    "next": "14.1.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "kubernetesjs": "^0.6.1",
     "@kubernetesjs/react": "^0.6.1",
-    "@tanstack/react-query": "^5.29.0",
-    "react-router-dom": "^6.22.3",
+    "@monaco-editor/react": "^4.7.0",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-select": "^2.0.0",
-    "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
+    "@tanstack/react-query": "^5.29.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "js-yaml": "^4.1.0",
+    "kubernetesjs": "^0.6.1",
     "lucide-react": "^0.314.0",
+    "next": "14.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.3",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@types/js-yaml": "^4.0.9",
     "@types/node": "^20.11.5",
     "@types/react": "^18.2.77",
     "@types/react-dom": "^18.2.18",
@@ -38,9 +40,9 @@
     "eslint": "^8.56.0",
     "eslint-config-next": "14.1.0",
     "postcss": "^8.4.33",
-    "ts-node": "^10.9.2",
-    "tailwindcss": "^3.4.1",
     "schema-sdk": "^0.11.3",
+    "tailwindcss": "^3.4.1",
+    "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   }
 }
