--- a/package.json
+++ b/package.json
@@ -19,23 +19,32 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
     "@tanstack/react-query": "^5.29.0",
+    "@zenfs/core": "^0.12.0",
+    "@zenfs/dom": "^0.2.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "isomorphic-git": "^1.25.0",
     "js-yaml": "^4.1.0",
     "kubernetesjs": "^0.6.1",
     "lucide-react": "^0.314.0",
     "next": "14.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^9.0.1",
     "react-router-dom": "^6.22.3",
+    "react-syntax-highlighter": "^15.5.0",
+    "remark-gfm": "^4.0.0",
     "tailwind-merge": "^2.2.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "xterm": "^5.3.0",
+    "xterm-addon-fit": "^0.8.0"
   },
   "devDependencies": {
     "@types/js-yaml": "^4.0.9",
     "@types/node": "^20.11.5",
     "@types/react": "^18.2.77",
     "@types/react-dom": "^18.2.18",
+    "@types/react-syntax-highlighter": "^15.5.11",
     "autoprefixer": "^10.4.17",
     "eslint": "^8.56.0",
     "eslint-config-next": "14.1.0",
