--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@zenfs/dom": "^0.2.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "cross-fetch": "^4.1.0",
     "isomorphic-git": "^1.25.0",
     "js-yaml": "^4.1.0",
     "kubernetesjs": "^0.6.1",
