--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "remark-gfm": "^4.0.0",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^11.1.0",
     "xterm": "^5.3.0",
     "xterm-addon-fit": "^0.8.0"
   },
