--- a/package.json
+++ b/package.json
@@ -10,29 +10,86 @@
     "codegen": "ts-node ./scripts/codegen.ts"
   },
   "dependencies": {
+    "@ark-ui/react": "^5.0.1",
+    "@chain-registry/v2": "^1.71.148",
+    "@cosmjs/encoding": "^0.32.4",
+    "@hookform/resolvers": "^3.10.0",
+    "@hyperweb/build": "^1.0.1",
+    "@hyperweb/parse": "^1.7.0",
+    "@interchain-kit/core": "0.3.2",
+    "@interchain-kit/keplr-extension": "0.3.2",
+    "@interchain-kit/react": "0.3.2",
+    "@interchain-ui/react": "1.26.3",
+    "@interchainjs/cosmos": "^1.11.0",
+    "@interchainjs/encoding": "^1.11.0",
     "@kubernetesjs/react": "^0.6.1",
     "@monaco-editor/react": "^4.7.0",
-    "@radix-ui/react-dialog": "^1.0.5",
-    "@radix-ui/react-dropdown-menu": "^2.0.6",
-    "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-select": "^2.0.0",
-    "@radix-ui/react-slot": "^1.0.2",
-    "@radix-ui/react-tabs": "^1.0.4",
-    "@tanstack/react-query": "^5.29.0",
-    "@zenfs/core": "^0.12.0",
+    "@radix-ui/react-accordion": "^1.2.3",
+    "@radix-ui/react-alert-dialog": "^1.1.6",
+    "@radix-ui/react-avatar": "^1.1.3",
+    "@radix-ui/react-checkbox": "^1.3.2",
+    "@radix-ui/react-context-menu": "^2.2.6",
+    "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-popover": "^1.1.6",
+    "@radix-ui/react-radio-group": "^1.2.3",
+    "@radix-ui/react-scroll-area": "^1.2.3",
+    "@radix-ui/react-select": "^2.2.5",
+    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-tabs": "^1.1.3",
+    "@radix-ui/react-toast": "^1.2.6",
+    "@radix-ui/react-tooltip": "^1.1.8",
+    "@swc/core": "^1.11.8",
+    "@swc/wasm": "^1.11.8",
+    "@swc/wasm-web": "^1.11.8",
+    "@tanstack/react-query": "^4.36.1",
+    "@tanstack/react-virtual": "^3.13.2",
+    "@zenfs/archives": "^1.1.0",
+    "@zenfs/core": "^2.0.0",
     "@zenfs/dom": "^0.2.0",
+    "acorn": "^8.14.1",
+    "acorn-walk": "^8.3.4",
     "agentic-kit": "^0.1.2",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
+    "bignumber.js": "^9.1.2",
+    "buffer": "^6.0.3",
+    "case": "^1.6.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "cross-fetch": "^4.1.0",
+    "dayjs": "^1.11.13",
+    "embla-carousel-react": "^8.5.2",
+    "esbuild-wasm": "^0.24.2",
+    "file-saver": "^2.0.5",
+    "gray-matter": "^4.0.3",
+    "hast-util-to-jsx-runtime": "^2.3.2",
+    "hyperwebjs": "^1.4.0",
+    "interchainjs": "^1.11.0",
     "isomorphic-git": "^1.25.0",
     "js-yaml": "^4.1.0",
+    "json-schema-faker": "^0.5.9",
+    "jszip": "^3.10.1",
     "kubernetesjs": "^0.6.1",
-    "lucide-react": "^0.314.0",
-    "next": "14.1.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-markdown": "^9.0.1",
+    "lodash-es": "^4.17.21",
+    "lucide-react": "^0.454.0",
+    "match-sorter": "^8.0.0",
+    "minimatch": "^10.0.1",
+    "monaco-editor": "^0.52.2",
+    "monaco-themes": "^0.4.4",
+    "motion": "^11.18.2",
+    "nanoid": "^5.1.3",
+    "next": "^15.2.2",
+    "next-seo": "^6.6.0",
+    "next-themes": "^0.3.0",
+    "nuqs": "^2.4.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-dropzone": "^14.3.8",
+    "react-hook-form": "^7.54.2",
+    "react-icons": "^5.5.0",
+    "react-markdown": "^9.1.0",
+    "react-pdf": "^9.2.1",
+    "react-resizable-panels": "^2.1.7",
     "react-router-dom": "^6.22.3",
     "react-syntax-highlighter": "^15.6.1",
     "remark": "^15.0.1",
@@ -40,9 +97,13 @@
     "remark-youtube": "^1.3.2",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
+    "unist-util-visit": "^5.0.0",
+    "use-debounce": "^10.0.4",
     "uuid": "^11.1.0",
     "xterm": "^5.3.0",
-    "xterm-addon-fit": "^0.8.0"
+    "xterm-addon-fit": "^0.8.0",
+    "zod": "^3.24.2",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@types/js-yaml": "^4.0.9",
