--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -107,6 +107,7 @@
     "zustand": "^5.0.3"
   },
   "devDependencies": {
+    "@types/file-saver": "^2.0.7",
     "@types/js-yaml": "^4.0.9",
     "@types/node": "^20.11.5",
     "@types/react": "^18.2.77",
