--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "codegen": "ts-node ./scripts/codegen.ts"
   },
   "dependencies": {
+    "@hyperweb/playground": "link:../chain-kit/packages/nextjs-playground",
     "@kubernetesjs/react": "^0.6.1",
     "@monaco-editor/react": "^4.7.0",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -23,8 +24,8 @@
     "clsx": "^2.1.0",
     "js-yaml": "^4.1.0",
     "kubernetesjs": "^0.6.1",
-    "lucide-react": "^0.314.0",
-    "next": "14.1.0",
+    "lucide-react": "^0.525.0",
+    "next": "15.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
@@ -44,5 +45,10 @@
     "tailwindcss": "^3.4.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
+  },
+  "pnpm": {
+    "overrides": {
+      "@hyperweb/playground": "link:../chain-kit/packages/nextjs-playground"
+    }
   }
 }
