--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@hyperweb/explorer": "link:../chain-kit/packages/nextjs-explorer",
-    "@hyperweb/playground": "link:../chain-kit/packages/nextjs-playground",
+    "@hyperweb/playground": "^0.0.2",
     "@kubernetesjs/react": "^0.6.1",
     "@monaco-editor/react": "^4.7.0",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -49,7 +49,6 @@
   },
   "pnpm": {
     "overrides": {
-      "@hyperweb/playground": "link:../chain-kit/packages/nextjs-playground",
       "@hyperweb/explorer": "link:../chain-kit/packages/nextjs-explorer"
     }
   }
