--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "codegen": "ts-node ./scripts/codegen.ts"
   },
   "dependencies": {
-    "@hyperweb/explorer": "link:../chain-kit/packages/nextjs-explorer",
+    "@hyperweb/explorer": "^0.0.1",
     "@hyperweb/playground": "^0.0.2",
     "@kubernetesjs/react": "^0.6.1",
     "@monaco-editor/react": "^4.7.0",
@@ -46,10 +46,5 @@
     "tailwindcss": "^3.4.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
-  },
-  "pnpm": {
-    "overrides": {
-      "@hyperweb/explorer": "link:../chain-kit/packages/nextjs-explorer"
-    }
   }
 }
